--- a/index.html
+++ b/index.html
@@ -12,7 +12,42 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          <li>Header sizes range 1-6</li>
+          <li>Metadata is stored inside the HEAD</li>
+          <li>a = "anchor"</li>
+          <li>Title goes into the HEAD</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Cascading Style Sheets</li>
+          <li>Makes the page look nice</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Invisible version control on your cpu</li>
+          <li>Work on  branch! Don;t break the main code</li>
+          <li>git status tells what branch you're in</li>
+          <li>git checkout takes you to "go" do something. "checkout" something</li>
+          <li>-b creates a new branch</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Makes it so users can interact with web page</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
