--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -28,6 +29,8 @@
         <ul>
           <li>Cascading Style Sheets</li>
           <li>Makes the page look nice</li>
+          <li>Must link to html for it to work</li>
+          <li>Can assign custom declarations to specific elements</li>
         </ul>
       </section>
    
@@ -39,6 +42,7 @@
           <li>git status tells what branch you're in</li>
           <li>git checkout takes you to "go" do something. "checkout" something</li>
           <li>-b creates a new branch</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
         </ul>
       </section>
    
