--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <h2>JavaScript</h2>
         <ul>
           <li>Makes it so users can interact with web page</li>
+          <li>Is its own separate file in directory</li>
+          <li>Is added to the index.html at the bottom as a script</li>
+          <br>
+          <li>Uses conditional logic like for loops and if/else if statements to take a detour in your code</li>
         </ul>
       </section>
     </main>
